@@ -5,6 +5,11 @@ Fluxus : (C) 2005 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 * (keys-down) returns vector of the ascii values of all keys pressed
 * (key-special-pressed id) for cursor keys etc
 * (keys-special-down) returns vector of all special keys pressed
+* kick/twist static object crash fix
+* editor fix
+* immediate mode state fix
+* fixed (hint-points) for polygons
+* fixed (draw-plane) and (draw-cube) no longer has a plane inside it :)
 
 0.10
 
